<resources>
    <string name="app_name">AppMaternal</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="menu_bienvenido">Bienvenida</string>
    <string name="menu_home">Mis datos</string>
    <string name="menu_historial">Historial</string>
    <string name="menu_recordatorios">Recordatorios</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_informativo">Sección Informativa</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>
    <string name="menu_campana">Personalizar Notificación</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_token_fmt">Token de registro FCM: %1$s</string>


</resources>